43. Funcionalidad del contador

--- a/02-bases/src/app/app.component.html
+++ b/02-bases/src/app/app.component.html
@@ -1,16 +1,7 @@
 <h1>{{ title }}</h1>
 <hr>
-<label for="number">
-  Counter:
-  <input type="number" id="number" value="{{ counter}}">
-</label>
 
-&nbsp;
-<button (click)="increaseBy(5)">+1</button>
-&nbsp;
-<button (click)="decreaseBy(5)">-1</button>
-&nbsp;
-<button (click)="resetCounter()">Reset</button>
-
-
+<app-counter />
+<hr>
+<br>
 <app-counter />
