--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -1,1 +1,21 @@
-<p>hero works!</p>
+<h1>Homem aranha</h1>
+
+
+<dl>
+  <td>Nome:</td>
+  <dd>{{ name }}</dd>
+
+  <td>Edad:</td>
+  <dd>{{ age }}</dd>
+
+
+  <td>Método:</td>
+  <dd>nome</dd>
+
+  <td>Capitalizado:</td>
+  <dd>nome</dd>
+</dl>
+
+<button (click)="cambiarName()" class="btn btn-sm btn-primary mx-2">Mudar nome</button>
+<button (click)="cambiarAge()" class="btn btn-sm btn-primary">Mudar edad</button>
+
