46. One way data binding - enlazado en una sola vía

--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -10,10 +10,13 @@
 
 
   <td>Método:</td>
-  <dd>nome</dd>
+  <dd>{{ getHeroDescription() }}</dd>
 
   <td>Capitalizado:</td>
-  <dd>nome</dd>
+  <dd>{{ capitalizedName }}</dd>
+
+  <td>Descripton</td>
+  <dd></dd>
 </dl>
 
 <button (click)="cambiarName()" class="btn btn-sm btn-primary mx-2">Mudar nome</button>
