--- a/02-bases/src/app/heroes/hero/hero.component.html
+++ b/02-bases/src/app/heroes/hero/hero.component.html
@@ -19,6 +19,5 @@
   <dd></dd>
 </dl>
 
-<button (click)="cambiarName()" class="btn btn-sm btn-primary mx-2">Mudar nome</button>
-<button (click)="cambiarAge()" class="btn btn-sm btn-primary">Mudar edad</button>
-
+<button *ngIf="name !== 'Spiderman'" (click)="changeHero()" class="btn btn-sm btn-primary mx-2">Mudar nome</button>
+<button *ngIf="age !== 25" (click)="changeAge()" class="btn btn-sm btn-primary">Mudar edad</button>
