--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -1,1 +1,23 @@
-<h1>DBZ main page</h1>
+<h1>DBZ personages</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+    <h4>Listado</h4>
+    <ul class="list-group">
+      <li class="list-group-item">Krillin: 500</li>
+      <li class="list-group-item">Goku: + de 8000</li>
+    </ul>
+  </div>
+
+  <div class="col">
+    <h4>Agregar personagem</h4>
+    <form action="" class="row">
+      <input type="text" class="form-control mb-2" id="nombre" placeholder="nombre">
+      <input type="text" class="form-control mb-2" id="poder" placeholder="poder">
+      <button type="submit" class="btn btn-sm btn-primary">Agregar</button>
+    </form>
+
+  </div>
+</div>
