--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -4,10 +4,10 @@
 
 <div class="row">
   <div class="col">
-    <app-dbz-list />
+    <dbz-list [characterList]="characters" />
   </div>
 
   <div class="col">
-   <app-dbz-add-character />
+   <dbz-add-character />
   </div>
 </div>
