--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -1,5 +1,13 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li class="list-group-item" *ngFor="let character of characterList; let i=index">
-    {{ character.name }} - Power: {{ character.power }}</li>
+  <li
+    class="list-group-item"
+    *ngFor="let character of characterList; let i=index; let isFirst = first; let isLast = last;">
+    <span class="text-primary">{{ i + 1 }}.</span>
+    <span>{{ character.name }}</span>
+    <strong> Power:</strong>
+     <span>{{ character.power }}</span>
+     <span>Es el primero {{ isFirst }} ========= </span>
+     <span>Es el útimo {{ isLast }}</span>
+    </li>
 </ul>
