67. @Output() - Emitir eventos al padre

--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -8,6 +8,6 @@
   </div>
 
   <div class="col">
-   <dbz-add-character />
+   <dbz-add-character (onNewCharacter)="onNewCharcter($event)" />
   </div>
 </div>
