--- a/02-bases/src/app/dbz/components/add-character/add-character.component.html
+++ b/02-bases/src/app/dbz/components/add-character/add-character.component.html
@@ -1,8 +1,9 @@
 <h4>Agregar personagem</h4>
-<form action="" class="row">
+<form action="#" (ngSubmit)="emitCharacter()" class="row">
   <input type="text" [(ngModel)]="character.name" name="nombre" class="form-control mb-2" id="nombre" placeholder="nombre">
   <input type="text" [(ngModel)]="character.power" name="power" class="form-control mb-2" id="poder" placeholder="poder">
-  <button type="submit" (click)="emitCharacter()" class="btn btn-sm btn-primary">Agregar</button>
+  <button type="submit" class="btn btn-sm btn-primary">Agregar</button>
 
   <pre>{{ character | json }}</pre>
+
 </form>
