Solución de la tarea - Flujo completo

--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -4,10 +4,14 @@
 
 <div class="row">
   <div class="col">
-    <dbz-list [characterList]="characters" />
+    <dbz-list
+      [characterList]="characters"
+      (eventDelete)="onDeleteCharacter($event)" />
   </div>
 
   <div class="col">
-   <dbz-add-character (onNewCharacter)="onNewCharcter($event)" />
+     <!-- juntando as peças: evento do elemento filho c-->
+     <!-- o evento vem do output do elemento filho-->
+   <dbz-add-character (onNewCharacterFromElementoFilho)="onNewCharcterFromElementoPai($event)" />
   </div>
 </div>
