--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -1,14 +1,16 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li
-    class="list-group-item"
-    [ngClass]="{'list-group-item-primary': isFirst}"
+  <li class="list-group-item d-flex justify-content-between" [ngClass]="{'list-group-item-primary': isFirst}"
     *ngFor="let character of characterList; let i=index; let isFirst = first; let isLast = last;">
-    <span class="text-primary">{{ i + 1 }}.</span>
-    <span>{{ character.name }}</span>
-    <strong> Power:</strong>
-     <span>{{ character.power }}</span>
-     <span>Es el primero {{ isFirst }} ========= </span>
-     <span>Es el útimo {{ isLast }}</span>
-    </li>
+
+    <div>
+      <span class="text-primary">{{ i + 1 }}.</span>
+      <span>{{ character.name }}</span>
+      <strong> Power:</strong>
+      <span>{{ character.power }}</span>
+    </div>
+
+    <button class="btn btn-sm btn-danger" (click)="emitEventDeleteElementoFilho(i)" title="Remover">X</button>
+
+  </li>
 </ul>
