--- a/02-bases/src/app/dbz/components/list/list.component.html
+++ b/02-bases/src/app/dbz/components/list/list.component.html
@@ -10,7 +10,7 @@
       <span>{{ character.power }}</span>
     </div>
 
-    <button class="btn btn-sm btn-danger" (click)="emitEventDeleteElementoFilho(i)" title="Remover">X</button>
+    <button class="btn btn-sm btn-danger" (click)="emitEventDeleteElementoFilho(character.id)" title="Remover">X</button>
 
   </li>
 </ul>
