--- a/02-bases/src/app/dbz/pages/main-page.component.html
+++ b/02-bases/src/app/dbz/pages/main-page.component.html
@@ -6,7 +6,7 @@
   <div class="col">
     <dbz-list
       [characterList]="dbzService.characters"
-      (eventDelete)="dbzService.onDeleteCharacter($event)" />
+      (eventDelete)="dbzService.onDeleteCharacterById($event)" />
   </div>
 
   <div class="col">
