--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Holá mundo</h1>
+<div class="d-flex">
+    <!-- Sidebar -->
+    <shared-sidebar></shared-sidebar>
+    <!-- Home page -->
+</div>
