--- a/03-gifs-app/src/app/app.component.html
+++ b/03-gifs-app/src/app/app.component.html
@@ -2,4 +2,7 @@
     <!-- Sidebar -->
     <shared-sidebar></shared-sidebar>
     <!-- Home page -->
+
+    <!-- home page -->
+     <gifs-home-page class="flex-fill"></gifs-home-page>
 </div>
