--- a/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
+++ b/03-gifs-app/src/app/gifs/components/card-list/card-list.component.html
@@ -1,14 +1,14 @@
 <div class="row">
 
-  <div class="col-md-3 col-sm-6">
+  <div *ngFor="let gif of gifs" class="col-md-3 col-sm-6">
 
-    <div class="card text-center bg-dark">
+    <div class="card mb-2 text-center bg-dark">
 
       <!-- crear image -->
 
       <div class="card-body text-white">
         <p class="card-text">
-          hola mundo
+          {{ gif.title }}
         </p>
       </div>
 
