116. Router Module y Páginas - SPA

--- a/04-countryApp/src/app/app.component.html
+++ b/04-countryApp/src/app/app.component.html
@@ -5,7 +5,8 @@
     </div>
 
     <div class="col">
-      rouer
+      <!-- renderiza aqui dentro o conteudo das paginas-->
+      <router-outlet></router-outlet>
     </div>
 
 </div>
