--- a/04-countryApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/04-countryApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -19,4 +19,24 @@
     routerLinkActive="active"
     [routerLinkActiveOptions]="{exact: true}"
     class="list-group-item">Contact Page</li>
+
+
+    <li
+    routerLink="countries/by-capital"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{exact: true}"
+    class="list-group-item">Por Capital</li>
+
+    <li
+    routerLink="countries/by-country"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{exact: true}"
+    class="list-group-item">Por Pais</li>
+
+    <li
+    routerLink="countries/by-region"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{exact: true}"
+    class="list-group-item">Por Region</li>
+
 </ul>
