--- a/04-countryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/04-countryApp/src/app/shared/components/search-box/search-box.component.html
@@ -4,4 +4,5 @@
   id="busca"
   [placeholder]="placeholder"
   class="form-control"
->
+  #searchBoxInput
+  (keyup.enter)="searchOfNewTerm(searchBoxInput.value)">
