--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -12,6 +12,8 @@
 <div class="row">
   <div class="col">
     <hr>
-    tabela listagem
+    <ul class="list-group" *ngFor="let country of countries; let i=index">
+      <li class="list-group-item mb-1">{{ country.capital }} - {{ country.population }}</li>
+    </ul>
   </div>
 </div>
