--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -12,8 +12,6 @@
 <div class="row">
   <div class="col">
     <hr>
-    <ul class="list-group" *ngFor="let country of countries; let i=index">
-      <li class="list-group-item mb-1">{{ country.capital }} - {{ country.population }}</li>
-    </ul>
+    <country-table [countries]="countries"></country-table>
   </div>
 </div>
