--- a/04-countryApp/src/app/countries/components/country-table/country-table.component.html
+++ b/04-countryApp/src/app/countries/components/country-table/country-table.component.html
@@ -22,7 +22,7 @@
         <td>{{ country.capital }}</td>
         <td>{{ country.population | number}}</td>
         <td>
-          <a href="#" target="_blank" rel="noopener noreferrer">Ver</a>
+          <a [routerLink]="[ '/countries/by', country.cca3]" >Info</a>
         </td>
       </tr>
     </tbody>
