--- a/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,3 +1,11 @@
-<p>
-  country-page works!
-</p>
+<h2>Por pais</h2>
+<hr>
+
+<shared-search-box
+  [placeholder]="'Buscar por pais'"
+  (searchEvent)="searchCountry( $event )">
+</shared-search-box>
+
+<hr>
+
+<country-table [countries]="getCountries"></country-table>
