--- a/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -7,5 +7,5 @@
 </shared-search-box>
 
 <hr>
-
+<shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
 <country-table [countries]="getCountries"></country-table>
