--- a/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -7,5 +7,6 @@
 </shared-search-box>
 
 <hr>
+<shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
 <country-table [countries]="countries"></country-table>
 
