139. Debounce - Peticiones cuando el usuario deja de escribir

--- a/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/04-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,11 @@
 <div class="row">
   <div class="col">
     <!--searchbox for busca-->
-    <shared-search-box (searchEvent)="listenerSearchBox($event)" [placeholder]="'Buscar por capital'"></shared-search-box>
+    <!-- (searchEvent)="listenerSearchBox($event)" -->
+    <shared-search-box
+      (onDebounce)="listenerSearchBox($event)"
+      [placeholder]="'Buscar por capital'">
+    </shared-search-box>
   </div>
 </div>
 
