--- a/04-countryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/04-countryApp/src/app/shared/components/search-box/search-box.component.html
@@ -1,3 +1,4 @@
+<!-- (keyup.enter)="searchOfNewTerm(searchBoxInput.value)" -->
 <input
   type="text"
   name="busca"
@@ -5,4 +6,5 @@
   [placeholder]="placeholder"
   class="form-control"
   #searchBoxInput
-  (keyup.enter)="searchOfNewTerm(searchBoxInput.value)">
+  (keyup)="onKeyPress( searchBoxInput.value)"
+  >
