--- a/05-pipesApp/src/app/app.component.html
+++ b/05-pipesApp/src/app/app.component.html
@@ -1,2 +1,9 @@
 <router-outlet />
 
+<p-button icon="pi pi-check" />
+<p-button label="Submit" icon="pi pi-check" />
+<p-button label="Submit" icon="pi pi-check" iconPos="right" />
+
+<br>
+
+<hr>
