--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,1 +1,24 @@
-<p>login-page works!</p>
+<div class="flex flex-column">
+
+  <span class="text-lg mb-4">Login</span>
+
+  <mat-form-field>
+    <mat-label>Usuário</mat-label>
+    <input type="text" matInput placeholder="Nombre de usuario">
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Contrasenha</mat-label>
+    <input type="password" matInput placeholder="Nombre de usuario">
+  </mat-form-field>
+
+  <button mat-button mat-flat-button color="primary">
+    <mat-icon>save</mat-icon>
+    Ingressar
+  </button>
+
+  <div class="flex justify-content-end mt-5">
+    <a routerLink="/auth/new-account" routerLinkActive="router-link-active">Não possui conta ?</a>
+  </div>
+
+</div>
